--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
             <!-- Modal content-->
             <div class="modal-content">
                 <center><div class="modal-header">
-                    <h4 class="modal-title">Allow Access to Geth and Refresh the Page</h4>
+                    <h4 class="modal-title">Allow Access to Parity and Refresh the Page</h4>
                 </div>
                 <div class="modal-body">
                     <code><p id="modaltext"></p></code>
@@ -79,7 +79,7 @@
     </footer>
 </div>
 <script>
-$("#modaltext").text( 'geth --rpc --rpccorsdomain "'+ window.location.protocol + '//' + window.location.host + '"' );
+$("#modaltext").text( 'Make sure your parity command-line options include --rpccorsdomain "'+ window.location.protocol + '//' + window.location.host + '"' );
 </script>
 </body>
 </html>
